# nautilus_pi

./: .env  .gitignore  Dockerfile  LICENSE  README.md  build.Dockerfile  cam_server.py  dhcpcd  docker-compose.yaml  env.sh  load_env.sh  net_config  net_setup.py  netplan  requirements.txt
config/: change_name.sh  dhcpcd  netplan
src/: env_var.sh  load_env.sh
src/uwrov_auto/: CMakeLists.txt  package.xml
src/uwrov_auto/scripts/: motor_driver.py
src/uwrov_cams/: CMakeLists.txt  package.xml
src/uwrov_cams/scripts/: pi_cam.py  usb_cam.py
src/uwrov_manipulator/: CMakeLists.txt  package.xml
src/uwrov_manipulator/src/: manipulator_driver.py
